@@ -2,6 +2,8 @@ package data_access;
 
 import entity.User;
 import entity.UserFactory;
+import use_case.login.LoginUserDataAccessInterface;
+import use_case.signup.SignupUserDataAccessInterface;
 
 import java.io.*;
 import java.time.LocalDateTime;
@@ -9,7 +11,7 @@ import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
-public class FileUserDataAccessObject implements UserSignupDataAccessInterface {
+public class FileUserDataAccessObject implements SignupUserDataAccessInterface, LoginUserDataAccessInterface {
 
     private final File csvFile;
 
@@ -34,7 +36,7 @@ public class FileUserDataAccessObject implements UserSignupDataAccessInterface {
             try (BufferedReader reader = new BufferedReader(new FileReader(csvFile))) {
                 String header = reader.readLine();
 
-                // TODO clean this up by creating a new Exception subclass and handling it in the UI.
+                // For later: clean this up by creating a new Exception subclass and handling it in the UI.
                 assert header.equals("username,password,creation_time");
 
                 String row;
@@ -57,6 +59,11 @@ public class FileUserDataAccessObject implements UserSignupDataAccessInterface {
         this.save();
     }
 
+    @Override
+    public User get(String username) {
+        return accounts.get(username);
+    }
+
     private void save() {
         BufferedWriter writer;
         try {
@@ -65,7 +72,7 @@ public class FileUserDataAccessObject implements UserSignupDataAccessInterface {
             writer.newLine();
 
             for (User user : accounts.values()) {
-                String line = "%s,%s,%s".formatted(
+                String line = String.format("%s,%s,%s",
                         user.getName(), user.getPassword(), user.getCreationTime());
                 writer.write(line);
                 writer.newLine();
